# RISCV-Crypto-Benchmark

./: CMakeLists.txt  README.md  aes.c  ascon.c  ascon.h  loader.c  loader.h  main.c
aes/: aes.c  aes.h
ascon/: ascon.c  asm.c  asm.h
chacha/: asm.h  chacha.c  chacha.h  poly1305.c  poly1305.h
graphs/: data.py  main.py  variance.py
opcodes test/: chacha.c  ror64.c
